data/derived/sp14/progs/unify/prog2055.ml.out
Characters 495-560:
  buildWeird(build(rand, depth-1), build(rand, depth-1),build(rand, depth-1))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type expr * expr * expr * 'd
